--- a/application.properties
+++ b/application.properties
@@ -8,3 +8,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eagle_eye_local
 spring.datasource.username=root
 spring.datasource.password=mysql2291991
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+example.property=ciao
