--- a/zuulservice/zuulservice.properties
+++ b/zuulservice/zuulservice.properties
@@ -1,4 +1,5 @@
 zuul.ignored-services: "*"
 zuul.prefix:  /api
-zuul.routes.organizationservice: /organization/**
+zuul.routes.organization-service: /organization/**
 zuul.routes.licensingservice: /licensing/**
+zuul.routes.specialroutesservice: /specialroute/**
